<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5EACEA00"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo2"></ImageView>


    </LinearLayout>
    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="Thank you for choosing the GRED app."
        android:textColor="@color/black"
        android:textSize="12dp"></TextView>


    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="REGISTRATION"
        android:textColor="@color/black"
        android:textSize="30sp"></TextView>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/your_name"
        android:background="@color/white"
        />


    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:background="@color/white"
        />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@color/white"
        />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="#FFFFFF"
        android:padding="5dp"
        app:backgroundTint="#388E3C"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="already have an account?"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:text="LOGIN"/>
    </LinearLayout>

</LinearLayout>