<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetActivity"
    android:orientation="vertical"
    android:background="#63EDFB2D"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="180dp"
            android:src="@drawable/logo2"></ImageView>


    </LinearLayout>

    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="Thank you for choosing the GRED app."
        android:textColor="@color/black"
        android:textSize="12dp"></TextView>


    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="RESET PASSWORD"
        android:textColor="@color/black"
        android:textSize="25sp"></TextView>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="@color/white"
        />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_again"
        android:inputType="textPassword"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/reset_password"
        app:backgroundTint="#D32F2F"
        android:background="#FFFFFF"
        android:layout_marginTop="25dp"
        />

</LinearLayout>