<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#63EDFB2D"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".AccountActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo2">
            </ImageView>


        </LinearLayout>

        <TextView
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Thank you for choosing the GRED app."
            android:textColor="@color/black"
            android:textSize="12dp"></TextView>


        <TextView
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="MY ACCOUNT"
            android:textColor="@color/black"
            android:textSize="30sp"></TextView>

        <TextView
            android:id="@+id/acctLine"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:text="@string/account_info" />

        <TextView
            android:id="@+id/acctName"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/account_holder_name" />

        <TextView
            android:id="@+id/acctUsername"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/account_holder_username" />

        <TextView
            android:id="@+id/acctPassword"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/account_holder_password" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFFFFF"
                android:padding="5dp"
                android:text="DELETE ACCOUNT"
                app:backgroundTint="#D32F2F" />

            <Button
                android:id="@+id/resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFFFFF"
                android:padding="5dp"
                android:text="RESET PASSWORD"
                app:backgroundTint="#388E3C" />

        </LinearLayout>

    </LinearLayout>




    <com.luseen.spacenavigation.SpaceNavigationView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:active_item_color="#FAF40909"
        app:active_centre_button_background_color="@color/white"
        app:centre_button_color="@color/centre_button_color"
        app:inactive_item_color="@color/white"
        app:space_background_color="#E9000000"
        app:centre_button_icon="@drawable/ic_baseline_home_24"
        app:space_item_icon_size="@dimen/space_item_icon_default_size"
        app:space_item_icon_only_size="@dimen/space_item_icon_only_size"
        />

</RelativeLayout>


