<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubjectActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#63EDFB2D"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".AccountActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo1">
            </ImageView>


        </LinearLayout>

        <TextView
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Thank you for choosing the GRED app."
            android:textColor="@color/black"
            android:textSize="12dp"></TextView>





    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="ADD A SUBJECT"
        android:textColor="@color/black"
        android:textSize="30sp"></TextView>


    <EditText
        android:id="@+id/subjectName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/subject_name" />

    <EditText
        android:id="@+id/score"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/your_score" />

    <EditText
        android:id="@+id/totalMarks"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/total_marks" />

    <Button
        android:id="@+id/addSubject"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="GET MY GRADE"
        android:background="#FFFFFF"
        android:padding="5dp"
        app:backgroundTint="#D32F2F"/>

</LinearLayout>

    <com.luseen.spacenavigation.SpaceNavigationView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:active_item_color="#FAF40909"
        app:active_centre_button_background_color="@color/white"
        app:centre_button_color="@color/centre_button_color"
        app:inactive_item_color="@color/white"
        app:space_background_color="#E9000000"
        app:centre_button_icon="@drawable/ic_baseline_home_24"
        app:space_item_icon_size="@dimen/space_item_icon_default_size"
        app:space_item_icon_only_size="@dimen/space_item_icon_only_size"
        />


</RelativeLayout>